--- a/superChat/views/index.html
+++ b/superChat/views/index.html
@@ -16,11 +16,10 @@
 		<script src="https://ajax.googleapis.com/ajax/libs/angular_material/1.1.10/angular-material.min.js"></script>
 		<!-- Client JS -->
 		<script src="./client.js"></script>
+		<link rel="stylesheet" href="./public/style.css">
 		<title>Super Chat</title>
 	</head>
 	<body>
-		<div ui-view="body">
-			<h1>Hi {{currentUser}} ! Welcome to SUPER CHAT</h1>
-		</div>
+		<div ui-view="body"></div>
 	</body>
 </html>
