superChat - feature regist new user

--- a/superChat/views/login.html
+++ b/superChat/views/login.html
@@ -6,11 +6,11 @@
         <input class="form-control" type="text" name='username' placeholder="username"/><br>
         <input class="form-control" type="password" name='password' placeholder="password"/><br>
         <button type="button" class="btn btn-primary btn-block" ng-click="login()"><span class="glyphicon glyphicon-off"></span>Login</button>
-        <div class="form-group pull-right">Not a member?<a href="#" data-toggle="modal" data-target="#myModal">Register</a></div>
+        <div class="form-group pull-right">Not a member?<a href="#" data-toggle="modal" data-target="#registPopUp">Register</a></div>
     </form>
 </div>
 <!-- REGISTER FORM -->
-<div class="modal fade" id="myModal">
+<div class="modal fade" id="registPopUp">
     <div class="modal-dialog">
         <div class="modal-content" >
             <div class="modal-header">
@@ -18,10 +18,9 @@
             </div>
             <div class="modal-body">
                 <form>
-                    <input type="text" class="form-control" id="handle" placeholder="Enter Handle">
-                    <input type="password" class="form-control" id="psw" placeholder="Enter password">
-                    <input type="text" class="form-control" id="email" placeholder="Enter Email">
-                    <button type="button" class="btn btn-primary btn-block" data-dismiss="modal"><span class="glyphicon glyphicon-off"></span>Register</button>
+                    <input type="text" class="form-control" placeholder="Enter username" ng-model="newUser.username">
+                    <input type="password" class="form-control" placeholder="Enter password" ng-model="newUser.password">
+                    <button type="button" class="btn btn-primary btn-block" data-dismiss="modal" ng-click="register()"><span class="glyphicon glyphicon-off"></span>Register</button>
                 </form>
             </div>
         </div>
