--- a/superChat/views/mypage.html
+++ b/superChat/views/mypage.html
@@ -5,8 +5,8 @@
     <h3 class="box-title">Group Chat</h3>
     <!-- Conversations are loaded here -->
     <div class="group-chat-box" id="group-messages"></div>
-    <input type="text" name="message" placeholder="Type Message ..." class="form-control">
-    <button type="button" class="btn btn-primary btn-flat">Send</button>
+    <input type="text" name="message" placeholder="Type Message ..." class="form-control" ng-model="groupMessage">
+    <button type="button" class="btn btn-primary btn-flat" ng-click="sendGroupMessage(groupMessage)">Send</button>
 </div>
 <!-- FRIENDS -->
 <div>
