--- a/superChat/public/style.css
+++ b/superChat/public/style.css
@@ -2,6 +2,14 @@ body {
     padding: 10px;
 }
 
+#group-chat-typing {
+    height: 50px;
+    line-height: 1em;
+    font-style: italic;
+    color: red;
+    font-size: 80%;
+}
+
 #private-chat-area {
     bottom: 0;
     height: 340px;
