--- a/superChat/views/login.html
+++ b/superChat/views/login.html
@@ -4,7 +4,7 @@
 <div>
    	<form>
         <input class="form-control" type="text" name='username' placeholder="username" ng-model="loginUser.username"/><br>
-        <input class="form-control" type="password" name='password' placeholder="password" ng-model="loginUser.password"/><br>
+        <input class="form-control" type="password" name='password' placeholder="password" ng-model="loginUser.password" my-enter="login()"/><br>
         <button type="button" class="btn btn-primary btn-block" ng-click="login()"><span class="glyphicon glyphicon-off"></span>Login</button>
         <div class="form-group pull-right">Not a member?<a href="#" data-toggle="modal" data-target="#registPopUp">Register</a></div>
     </form>
